--- a/.github/workflow/deploy_bookdown.yml
+++ b/.github/workflow/deploy_bookdown.yml
@@ -1,48 +1,41 @@
-on:
-  push:
-     branches:
-       - master
-
-  
-name: renderbook
-
-jobs:
+jobs:  
   bookdown:
     name: Render-Book
-    runs-on: macOS-latest
+    runs-on: ubuntu-20.04
     steps:
-      - uses: actions/checkout@v1
+      - uses: actions/checkout@v2
       - uses: r-lib/actions/setup-r@v1
       - uses: r-lib/actions/setup-pandoc@v1
+      - name: Install TinyTeX
+        uses: r-lib/actions/setup-tinytex@v1
+        env:
+          TINYTEX_INSTALLER: TinyTeX
       - name: Install rmarkdown
         run: Rscript -e 'install.packages(c("rmarkdown","bookdown"))'
       - name: Render Book
         run: Rscript -e 'bookdown::render_book("index.Rmd")'
-      - uses: actions/upload-artifact@v1
+      - uses: actions/upload-artifact@v2
         with:
-          name: docs
-          path: docs/
-  
-# Need to first create an empty gh-pages branch
-# see https://pkgdown.r-lib.org/reference/deploy_site_github.html
-# and also add secrets for a GH_PAT and EMAIL to the repository
-# gh-action from Cecilapp/GitHub-Pages-deploy
-  checkout-and-deploy:
-   runs-on: ubuntu-latest
+          name: _book
+          path: _book/
+          
+checkout-and-deploy:
+   runs-on: ubuntu-20.04
    needs: bookdown
    steps:
      - name: Checkout
-       uses: actions/checkout@master
+       uses: actions/checkout@v2
      - name: Download artifact
-       uses: actions/download-artifact@v1.0.0
+       uses: actions/download-artifact@v2
        with:
          # Artifact name
-         name: docs # optional
+         name: _book # optional
          # Destination path
-         path: docs # optional
+         path: _book # optional
      - name: Deploy to GitHub Pages
-       uses: Cecilapp/GitHub-Pages-deploy@master
+       uses: Cecilapp/GitHub-Pages-deploy@v3
        env:
-          EMAIL: ${{ secrets.EMAIL }}               # must be a verified email
-          GH_TOKEN: ${{ secrets.GH_PAT }} # https://github.com/settings/tokens
-          BUILD_DIR: _book/                     # "_site/" by default
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+       with:
+        build_dir: _book
+        branch: gh-pages
