--- a/.github/workflow/deploy_bookdown.yml
+++ b/.github/workflow/deploy_bookdown.yml
@@ -1,3 +1,10 @@
+on:
+  push:
+     branches:
+     # Default branches below
+       - main
+       - master
+
 jobs:  
   bookdown:
     name: Render-Book
