--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -11,21 +11,39 @@ name: bookdown
 
 jobs:
   bookdown:
-    name: Render my document
-    runs-on: macOS-latest
+    runs-on: ubuntu-latest
+    # Only restrict concurrency for non-PR jobs
+    concurrency:
+      group: pkgdown-${{ github.event_name != 'pull_request' || github.run_id }}
+    env:
+      GITHUB_PAT: ${{ secrets.GITHUB_TOKEN }}
     steps:
-      - uses: actions/checkout@v2
-      - uses: r-lib/actions/setup-r@v1
-      - uses: r-lib/actions/setup-pandoc@v1
-      - uses: r-lib/actions/setup-tinytex@v1
+      - uses: actions/checkout@v3
+
+      - uses: r-lib/actions/setup-pandoc@v2
+
+      - uses: r-lib/actions/setup-r@v2
+        with:
+          use-public-rspm: true
+
+      - uses: r-lib/actions/setup-renv@v2
+      
       - name: Install rmarkdown
         run: Rscript -e 'install.packages(c("rmarkdown","bookdown","readr","here"))'
 
+      - name: Cache bookdown results
+        uses: actions/cache@v3
+        with:
+          path: _bookdown_files
+          key: bookdown-${{ hashFiles('**/*Rmd') }}
+          restore-keys: bookdown-
+
       - name: Build site
         run: bookdown::render_book("index.Rmd", quiet = TRUE)
+        shell: Rscript {0}
 
       - name: Commit results
         run: |
-          git add *
+          git add .
           git commit -m 'Re-build my-documents' || echo "No changes to commit"
           git push origin || echo "No changes to commit"
