--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -44,6 +44,8 @@ jobs:
 
       - name: Commit results
         run: |
+          git config --global user.email "irss.ubc.forestry@gmail.com"
+          git config --global user.name "IRSS UBC" 
           git add .
           git commit -m 'Re-build my-documents' || echo "No changes to commit"
           git push origin || echo "No changes to commit"
