updated output dir

--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -39,7 +39,7 @@ jobs:
           restore-keys: bookdown-
 
       - name: Build site
-        run: bookdown::render_book("index.Rmd", quiet = TRUE)
+        run: bookdown::render_book("index.Rmd", quiet = TRUE, output_dir = "docs")
         shell: Rscript {0}
 
       - name: Commit results
