--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -37,15 +37,30 @@ jobs:
           path: _bookdown_files
           key: bookdown-${{ hashFiles('**/*Rmd') }}
           restore-keys: bookdown-
-
-      - name: Build site
-        run: bookdown::render_book("index.Rmd", quiet = TRUE, output_dir = "docs")
-        shell: Rscript {0}
-
-      - name: Commit results
-        run: |
-          git config --global user.email "75696926+IRSS-UBC@users.noreply.github.com"
-          git config --global user.name "IRSS UBC" 
-          git add .
-          git commit -m 'Re-build my-documents' || echo "No changes to commit"
-          git push origin || echo "No changes to commit"
+      - name: Render Book
+        run: Rscript -e 'bookdown::render_book("index.Rmd")'
+      - uses: actions/upload-artifact@v2
+        with:
+          name: _book
+          path: _book/
+          
+   checkout-and-deploy:
+   runs-on: ubuntu-20.04
+   needs: bookdown
+   steps:
+     - name: Checkout
+       uses: actions/checkout@v2
+     - name: Download artifact
+       uses: actions/download-artifact@v2
+       with:
+         # Artifact name
+         name: _book # optional
+         # Destination path
+         path: _book # optional
+     - name: Deploy to GitHub Pages
+       uses: Cecilapp/GitHub-Pages-deploy@v3
+       env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+       with:
+        build_dir: _book
+        branch: gh-pages
