--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -17,26 +17,33 @@ jobs:
         run: Rscript -e 'install.packages(c("rmarkdown","bookdown","readr","here"))'
       - name: Render Book
         run: Rscript -e 'bookdown::render_book("index.Rmd")'
-      - uses: actions/upload-artifact@v2
+       - uses: actions/upload-artifact@v1
+         with:
+           name: docs
+           path: docs/
   
-# Need to first create an empty gh-pages branch
-# see https://pkgdown.r-lib.org/reference/deploy_site_github.html
-# and also add secrets for a GH_PAT and EMAIL to the repository
-# gh-action from Cecilapp/GitHub-Pages-deploy
-  checkout-and-deploy:
-   runs-on: ubuntu-latest
-   needs: bookdown
-   steps:
-     - name: Checkout
-       uses: actions/checkout@v2
-     - name: Download artifact
-       uses: actions/download-artifact@v2
-     - name: Deploy to GitHub Pages
-       uses: Cecilapp/GitHub-Pages-deploy@v3
-       env:
-          GH_TOKEN: ${{ secrets.GH_PAT }} # https://github.com/settings/tokens
-       with:
-          EMAIL: ${{ secrets.EMAIL }}               # must be a verified email
-          BUILD_DIR: _book/                     # "_site/" by default
+ # deploy to gh pages yml
+   build-and-deploy:
+    runs-on: ubuntu-latest
+    needs: bookdown
+    steps:
+       - name: Checkout 🛎️
+         uses: actions/checkout@v2 # If you're using actions/checkout@v2 you must set persist-credentials to false in most cases for the deployment to work correctly.
+         with:
+         persist-credentials: false
+    
+      - name: Download Artifacts 🔻 # The built project is downloaded into the 'site' folder.
+        uses: actions/download-artifact@v1
+        with:
+        name: docs
+      
+       - name: Deploy 🚀
+         uses: JamesIves/github-pages-deploy-action@releases/v3
+         with:
+           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+           BRANCH: gh-pages # The branch the action should deploy to.
+           FOLDER: docs
+           TARGET_FOLDER: docs # The folder the action should deploy.
+           CLEAN: true
     
  
