--- a/.github/workflows/deploy_bookdown.yml
+++ b/.github/workflows/deploy_bookdown.yml
@@ -19,8 +19,8 @@ jobs:
         run: Rscript -e 'bookdown::render_book("index.Rmd")'
       - uses: actions/upload-artifact@v2
         with:
-          name: docs
-          path: docs/
+          name: book
+          path: book/
   
 # Need to first create an empty gh-pages branch
 # see https://pkgdown.r-lib.org/reference/deploy_site_github.html
@@ -36,9 +36,9 @@ jobs:
        uses: actions/download-artifact@v2
        with:
          # Artifact name
-         name: docs # optional
+         name: book # optional
          # Destination path
-         path: docs # optional
+         path: book # optional
      - name: Deploy to GitHub Pages
        uses: Cecilapp/GitHub-Pages-deploy@v3
        env:
